crates/plotnik-lib/tests/02-parser/recovery_validation/quantified_anchor.txt
(call (a) . * (b))
------------------ DIAGNOSTICS -------------------
error: anchors cannot be quantified
 --> query.ptk:1:13
  |
1 | (call (a) . * (b))
  |             ^
  |
help: remove the quantifier
  |
1 - (call (a) . * (b))
1 + (call (a) .  (b))
  |
help: anchors constrain position and produce no value
